Add openapi generated code from spec 3.2.0
